[Bugfix] Add a new type of routing rules for datanlik farms
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/Farm/Datalink/Action.pm
	modified:   usr/share/perl5/Zevenet/Farm/L4xNAT/Backend.pm
	modified:   usr/share/perl5/Zevenet/Net/Route.pm
	modified:   usr/share/perl5/Zevenet/SystemInfo.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -493,8 +493,10 @@ $l4sdpid="/var/run/l4sd.pid";#update
 $l4sdcfg="$configdir/l4sd.cfg";#update
 
 # routing
-# initial farm prio
-$routingRulePrioFarm="25000";
+# L4 farm prio
+$routingRulePrioFarmL4="25000";
+# datalink farm prio
+$routingRulePrioFarmDatalink="26000";
 # Min prio for rules created by the user. It must be greater than all farms rules
 $routingRulePrioUserMin="29000";
 # Maximum prio for rules created by the user. It must be lower than ifaces priority
