Enable case insensitive Headers
Signed-off-by: Abdessamad El Abbassi <abdess.elabbassi@zevenet.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,8 +41,9 @@ add_definitions(-DPRINT_DEBUG_FLOW_BUFFERS=0)
 add_definitions(-DENABLE_QUICK_RESPONSE=1)
 add_definitions(-DUSE_SSL_BIO_BUFFER=1)
 add_definitions(-DDEBUG_HTTP_HEADERS=0)
-add_definitions(-DMALLOC_TRIM_TIMER=0 -DMALLOC_TRIM_TIMER_INTERVAL=300) # force release of memory back to the system
-add_definitions(-DDEFAULT_MAINTENANCE_INTERVAL=2)
+add_definitions(-DMALLOC_TRIM_TIMER=0 -DMALLOC_TRIM_TIMER_INTERVAL=3600) # force release of memory back to the system
+add_definitions(-DDEFAULT_MAINTENANCE_INTERVAL=10)
+add_definitions(-DENABLE_CI_HEADERS=1) #enable case insensitive comparator in header map.
 
 set(l7core_sources
     debug/logger.h debug/logger.cpp
