[Improvement] Remove syscalls to get the cloud provider
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   DEBIAN/postinst
	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/API32/System/Cluster.pm
	modified:   usr/share/perl5/Zevenet/API32/System/Info.pm
	modified:   usr/share/perl5/Zevenet/API40/System/Cluster.pm
	modified:   usr/share/perl5/Zevenet/API40/System/Info.pm
	modified:   usr/share/perl5/Zevenet/Cmd/zcluster-manager.pm
	modified:   usr/share/perl5/Zevenet/SystemInfo.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -521,6 +521,7 @@ $doc_v4_0="https://www.zevenet.com/zapidocv4.0";
 $lang="";
 
 # cloud
+$cloud_provider="nocloud";
 $cloud_address_metadata="169.254.169.254";
 $aws_bin="/usr/bin/aws";
 $aws_credentials="$configdir/cloud/.aws/credentials";
