[Improvement] Use Zevenet funtions to execute commands in system
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/bin/enterprise.bin
	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/API3/Graph.pm
	modified:   usr/share/perl5/Zevenet/API40/Farm/Session.pm
	modified:   usr/share/perl5/Zevenet/Apt.pm
	modified:   usr/share/perl5/Zevenet/Aws.pm
	modified:   usr/share/perl5/Zevenet/Backup.pm
	modified:   usr/share/perl5/Zevenet/Certificate.pm
	modified:   usr/share/perl5/Zevenet/Certificate/Activation.pm
	modified:   usr/share/perl5/Zevenet/Cluster.pm
	modified:   usr/share/perl5/Zevenet/Cmd/cluster_status.pm
	modified:   usr/share/perl5/Zevenet/Cmd/sendNotification.pm
	modified:   usr/share/perl5/Zevenet/Cmd/zenbui.pm
	modified:   usr/share/perl5/Zevenet/Conntrackd.pm
	modified:   usr/share/perl5/Zevenet/Debug.pm
	modified:   usr/share/perl5/Zevenet/ELoad.pm
	modified:   usr/share/perl5/Zevenet/Farm/GSLB/Config.pm
	modified:   usr/share/perl5/Zevenet/Farm/GSLB/Service.pm
	modified:   usr/share/perl5/Zevenet/Farm/GSLB/Stats.pm
	modified:   usr/share/perl5/Zevenet/Farm/GSLB/Validate.pm
	modified:   usr/share/perl5/Zevenet/Farm/GSLB/Zone.pm
	modified:   usr/share/perl5/Zevenet/Farm/HTTP/Backend.pm
	modified:   usr/share/perl5/Zevenet/Farm/HTTP/Config.pm
	modified:   usr/share/perl5/Zevenet/Farm/L4xNAT/Backend.pm
	modified:   usr/share/perl5/Zevenet/IPDS/Blacklist/Core.pm
	modified:   usr/share/perl5/Zevenet/IPDS/Blacklist/Runtime.pm
	modified:   usr/share/perl5/Zevenet/IPDS/RBL/Core.pm
	modified:   usr/share/perl5/Zevenet/IPDS/Setup.pm
	modified:   usr/share/perl5/Zevenet/IPDS/WAF/Parser.pm
	modified:   usr/share/perl5/Zevenet/Log.pm
	modified:   usr/share/perl5/Zevenet/Login.pm
	modified:   usr/share/perl5/Zevenet/Net/ConnStats.pm
	modified:   usr/share/perl5/Zevenet/Net/Core.pm
	modified:   usr/share/perl5/Zevenet/Net/Interface.pm
	modified:   usr/share/perl5/Zevenet/Net/Route.pm
	modified:

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -183,6 +183,8 @@ $tail="/usr/bin/tail";
 $zcat="/bin/zcat";
 #Where is ntpserver?
 $datentp="/usr/sbin/ntpdate";
+#Where is date?
+$date="/usr/bin/date";
 #Where is arping?
 $arping_bin="/usr/bin/arping";
 #Where is ping?
@@ -219,6 +221,8 @@ $sed_bin="/bin/sed";
 $cut_bin="/bin/cut";
 #Where is ls?
 $ls="/bin/ls";
+#Where is pgrep?
+$pgrep="/usr/bin/pgrep";
 #Where is stat?
 $stat="/usr/bin/stat";
 #Where is cp?
@@ -271,6 +275,10 @@ $groups_bin="/usr/bin/groups";
 $echo_bin="/bin/echo";
 #Where is dpkg?
 $dpkg_bin="/usr/bin/dpkg";
+#Where is dpkg-query?
+$dpkg_query ="/usr/bin/dpkg-query";
+#Where is nproc?
+$nproc_bin="/usr/bin/nproc";
 #Where is grep?
 $grep_bin="/bin/grep";
 #Where is nft?
