[Bugfix] Do not convert the date to UTC if it is already UTC
Signed-off-by: Anonymous <no_reply@zevenet.com>

	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/Certificate/Activation.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -130,6 +130,8 @@ $sys_net_dir="/sys/class/net";
 
 
 ## binaries
+#Where is cat date?
+$date="/usr/bin/date";#update
 #Where is cat binary?
 $aws_cat_bin="/bin/cat";#update
 $default_cat_bin="/usr/bin/cat";#update
