[Improvement] Set the sessions code only for EE
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   build-pkg/config
	modified:   usr/share/perl5/Zevenet/API40/Routes.pm
	new file:   usr/share/perl5/Zevenet/API40/Routes/L4xNAT.pm
	modified:   usr/share/perl5/Zevenet/Farm/L4xNAT/Sessions.pm
	new file:   usr/share/perl5/Zevenet/Farm/L4xNAT/Sessions/Ext.pm

--- a/build-pkg/config
+++ b/build-pkg/config
@@ -196,6 +196,7 @@ encrypted_files=(
 	usr/share/perl5/Zevenet/API40/Farm/HTTP/Ext.pm
 	usr/share/perl5/Zevenet/API40/Farm/MoveService.pm
 	usr/share/perl5/Zevenet/API40/Farm/Put/GSLB.pm
+	usr/share/perl5/Zevenet/API40/Farm/Sessions.pm
 	usr/share/perl5/Zevenet/API40/Farm/Service/Ext.pm
 	usr/share/perl5/Zevenet/API40/Farm/Zone.pm
 	usr/share/perl5/Zevenet/API40/Interface/Bonding.pm
@@ -252,6 +253,7 @@ encrypted_files=(
 	usr/share/perl5/Zevenet/Farm/HTTP/HTTPS/Ext.pm
 	usr/share/perl5/Zevenet/Farm/HTTP/Service/Ext.pm
 	usr/share/perl5/Zevenet/Farm/L4xNAT/Config/Ext.pm
+	usr/share/perl5/Zevenet/Farm/L4xNAT/Sessions/Ext.pm
 	usr/share/perl5/Zevenet/IPDS/Base.pm
 	usr/share/perl5/Zevenet/IPDS/Blacklist/Actions.pm
 	usr/share/perl5/Zevenet/IPDS/Blacklist/Config.pm
