[Bugfix] Add the zevenet_nameservers.conf file in the zevenet start so that the RBL rules work
Signed-off-by: Adan Samuel Marin Jacquot <adan.marin@zevenet.com>

	modified:   usr/local/zevenet/share/global.conf.template
	new file:   usr/local/zevenet/share/zevenet_nameservers.conf
	modified:   usr/share/perl5/Zevenet/IPDS/RBL/Config.pm
	modified:   usr/share/perl5/Zevenet/IPDS/RBL/Runtime.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -491,6 +491,8 @@ $blacklistsCronFile="/etc/cron.d/blacklists";
 $dosConf="$configdir/ipds/dos/dos.conf";#update
 $dosConfDir="$configdir/ipds/dos";#update
 $lockIpdsPackage="/tmp/ipds_package.lock";
+$rblDNSTemplate="$templatedir/zevenet_nameservers.conf";
+$rblDNSConfig="$configdir/ipds/rbl/zevenet_nameservers.conf";
 
 # Rabc Module
 $rbacRolesTpl_dir="$templatedir/rbac_roles";
