[Improvement] ProxyNG disabled as default
Signed-off-by: Antonio Rendon <antonio.rendon@zevenet.com>

	modified:   usr/local/zevenet/migrating/pound2zproxy.sh
	modified:   usr/local/zevenet/migrating/ssyncd.pl
	modified:   usr/local/zevenet/share/global.conf.template

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -331,14 +331,14 @@ $poundctl="$base_pound/sbin/poundctl";#update
 
 # l7 proxy
 # Set the l7 binary: NG = true => zproxy, NG = false => pound
-$proxy_ng="true";
+$proxy_ng="false";
 
 #where is l7 proxy dir?
-$base_proxy="$base_zproxy";
+$base_proxy="$base_pound";
 #where is l7 proxy binary?
-$proxy="$zproxy";
+$proxy="$pound";
 #where is l7 proxy ctl?
-$proxyctl="$zproxyctl";
+$proxyctl="$poundctl";
 #l7 file configuration template?
 $proxytpl="$templatedir/proxytpl.cfg";#update
 
