[bugfix] Disabled gzip compression for cherokee letsencrypt standalone server
Signed-off-by: Emilio Campos <emilio.campos@zevenet.com>

	modified:   ../usr/local/zevenet/app/letsencryptz/etc/cherokee_localhost.conf

--- a/usr/local/zevenet/app/letsencryptz/etc/cherokee_localhost.conf
+++ b/usr/local/zevenet/app/letsencryptz/etc/cherokee_localhost.conf
@@ -23,12 +23,12 @@ vserver!1!logger!access!type = file
 vserver!1!nick = default
 #vserver!1!rule!500!encoder!gzip = allow
 #vserver!1!rule!500!encoder!gzip!compression_level = 9
-#vserver!1!rule!500!match = directory
-#vserver!1!rule!500!match!directory = /
-#vserver!1!rule!500!match!final = 0
+vserver!1!rule!500!match = directory
+vserver!1!rule!500!match!directory = /
+vserver!1!rule!500!match!final = 0
 vserver!1!rule!300!document_root = /usr/local/zevenet/app/letsencryptz/webroot/
-vserver!1!rule!300!encoder!gzip = allow
-vserver!1!rule!300!encoder!gzip!compression_level = 9
+#vserver!1!rule!300!encoder!gzip = allow
+#vserver!1!rule!300!encoder!gzip!compression_level = 9
 vserver!1!rule!300!handler = common
 vserver!1!rule!300!handler!allow_dirlist = 0
 vserver!1!rule!300!handler!allow_pathinfo = 0
