[bugfix] fixed broken symlinks in letsencryptz if detected
Signed-off-by: Emilio Campos <emilio.campos@zevenet.com>

	modified:   usr/local/zevenet/bin/letsencryptz
	modified:   usr/local/zevenet/share/global.conf.template

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -229,6 +229,8 @@ $stat="/usr/bin/stat";
 $cp="/bin/cp";
 #Where is rm?
 $rm="/bin/rm";
+#Where is find?
+$find="/bin/find";
 #Where is modprobe?
 $aws_modprobe="/sbin/modprobe";#update
 $default_modprobe="/usr/sbin/modprobe";#update
