[Bugfix] Changed bonding MAC is lost when slave is added or removed
Signed-off-by: Antonio Rendon <antonio.rendon@zevenet.com>

	modified:   usr/local/zevenet/bin/checkupgrades
	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/API40/Interface/Bonding.pm
	modified:   usr/share/perl5/Zevenet/Net/Bonding.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -485,6 +485,7 @@ $bonding_masters_filename="/sys/class/net/bonding_masters";
 $bonding_mode_filename="bonding/mode";
 $bonding_slaves_filename="bonding/slaves";
 $bonding_miimon_filename="bonding/miimon";
+$bonding_hwaddr_filename="bonding_slave/perm_hwaddr";
 
 #Notifications Module
 $notifConfDir="$configdir/notifications";#update
