[Bugfix] fixed netcat connection test with proxy authentication
Signed-off-by: Adan Samuel Marin Jacquot <adan.marin@zevenet.com>

	modificado:     usr/local/zevenet/bin/checkupgrades
	modificado:     usr/local/zevenet/share/global.conf.template

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -319,7 +319,8 @@ $default_netcat_bin="/usr/bin/nc.openbsd";#update
 $netcat_bin="/usr/bin/nc.openbsd";
 #Where is dmidecode
 $dmidecode_bin="/usr/sbin/dmidecode";
-
+#Where is expect binary?
+$expect_bin="/usr/bin/expect";
 
 # zproxy
 #where is zproxy dir?
