[Improvement] Functionalized the execution of migration scripts
Signed-off-by: Adan Samuel Marin Jacquot <adan.marin@zevenet.com>

	modificado:     DEBIAN/postinst
	modificado:     usr/local/zevenet/bin/zenbackup.pl
	modificado:     usr/local/zevenet/bin/zevenet
	modificado:     usr/local/zevenet/share/global.conf.template
	modificado:     usr/share/perl5/Zevenet/Config.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -55,6 +55,8 @@ $first_boot_flag="/etc/firstzlbboot";
 $migration_flag="/etc/zlbmigration";
 #zevenet service
 $zevenet_service="/etc/init.d/zevenet";
+# directory of the migration scripts
+$mig_dir="$zdir/migrating";
 
 # System files
 #rt tables file
