[Improvement] Add a directive to pound to control the maximum HTTP body passed to WAF when pound is working
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	new file:   usr/local/zevenet/migrating/waf_body_size.sh
	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/Farm/HTTP/Config.pm
	modified:   usr/share/perl5/Zevenet/Farm/HTTP/Ext.pm
	modified:   usr/share/perl5/Zevenet/Farm/HTTP/Factory.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -354,7 +354,7 @@ $proxyctl="$poundctl";
 $proxytpl="$templatedir/proxytpl.cfg";#update
 
 #maximum value of http body to pass to modsecurity
-$waf_body_size="";
+$waf_max_body="32000";
 #Where is modsec rules check
 $waf_rule_check_bin="/usr/bin/modsec-rules-check";
 #time to ensure that the farm has been stopped completaly
