[Improvement] Check the port protocol when the farm port is modified
Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

	modified:   usr/local/zevenet/share/global.conf.template
	modified:   usr/share/perl5/Zevenet/API40/Farm/Action.pm
	modified:   usr/share/perl5/Zevenet/API40/Farm/Put/GSLB.pm
	modified:   usr/share/perl5/Zevenet/API40/Farm/Put/HTTP.pm
	modified:   usr/share/perl5/Zevenet/API40/Farm/Put/L4xNAT.pm
	modified:   usr/share/perl5/Zevenet/Arrays.pm
	modified:   usr/share/perl5/Zevenet/Farm/Action.pm
	modified:   usr/share/perl5/Zevenet/Farm/Factory.pm
	modified:   usr/share/perl5/Zevenet/Farm/GSLB/Config.pm
	modified:   usr/share/perl5/Zevenet/Farm/GSLB/Factory.pm
	modified:   usr/share/perl5/Zevenet/Farm/L4xNAT.pm
	modified:   usr/share/perl5/Zevenet/Farm/L4xNAT/Config.pm
	deleted:    usr/share/perl5/Zevenet/Farm/L4xNAT/Validate.pm
	modified:   usr/share/perl5/Zevenet/Net/Util.pm
	modified:   usr/share/perl5/Zevenet/Net/Validate.pm

--- a/usr/local/zevenet/share/global.conf.template
+++ b/usr/local/zevenet/share/global.conf.template
@@ -137,7 +137,7 @@ $sys_net_dir="/sys/class/net";
 
 ## binaries
 #Where is netstat binary?
-$netstat_bin="/usr/bin/file";
+$netstat_bin="/usr/bin/netstat";
 #Where is file binary?
 $file_bin="/usr/bin/file";
 #Where is cat binary?
