tests: Some responses have been programmed in the backend in order to get different outputs
With this commit the following changes have been added too:
   * Only required modules have been loaded in Nginx
   * The response headers have been added in the output file
   * The -k parameter has been added in order to debug easily
   * The format of the reporter file was changed to do more friendly
   * The reporter file is cleaned when the test.sh script is executed

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/nginx-sites.conf
+++ b/tests/functional/tpl/nginx-sites.conf
@@ -2,8 +2,8 @@ server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
 
-	listen 443 ssl;
-	listen [::]:443 ssl;
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
 
 	ssl_certificate     #{TEST_TPL}/zencert.pem;
 	ssl_certificate_key #{TEST_TPL}/zencert-c.key;
@@ -11,12 +11,96 @@ server {
 	root #{HTTP_WEBROOT};
 
 	# Add index.php to the list if you are using PHP
-	index index.html index.htm;
+	# index index.html index.htm;
 
-	server_name _;
+	server_name bck-#{BCK_ID};
+	add_header Backend $server_name;
+	more_clear_headers 'Date:*';
 
-	error_page 404 /error_404.html;
+
+# GET, POST: /
 	location / {
-		try_files $uri $uri/ =404;
+		echo "Default response of the backend #{BCK_ID}";
 	}
+
+# GET: /client-ip
+	location /client-ip {
+		echo $remote_addr;
+   }
+
+# GET: /echo
+	location /echo {
+		echo_duplicate 1 $echo_client_request_headers;
+		echo "\r";
+
+		echo_read_request_body;
+		echo_request_body;
+   }
+
+# GET: /body-size/<size>/chunked
+	location ~ /body-size/([0-9]+)/chunked$ {
+		#~ more_clear_headers 'Content-Length*';  # echo sends the response chunked
+		echo_duplicate $1 '1';
+   }
+
+# GET: /sleep-response/<seconds>
+	location ~ /sleep-response/([0-9]+)$ {
+     echo_sleep   $1;
+     echo body;
+   }
+
+# GET: /sleep-body/<seconds>
+	location ~ /sleep-body/([0-9]+)$ {
+     echo body part 1;
+     echo_flush;  # ensure the client can see previous output immediately
+     echo_sleep   $1;
+     echo body part 2;
+   }
+
+# GET, POST, PUT, DELETE: /status/<code>
+	location /status/200 {
+	    echo_status 200;
+	    echo "Custom HTTP code";
+   }
+	location /status/201 {
+	    echo_status 201;
+	    echo "Custom HTTP code";
+   }
+	location /status/301 {
+	    echo_status 301;
+	    echo "Custom HTTP code";
+   }
+	location /status/302 {
+	    echo_status 302;
+	    echo "Custom HTTP code";
+   }
+	location /status/400 {
+	    echo_status 400;
+	    echo "Custom HTTP code";
+   }
+	location /status/401 {
+	    echo_status 401;
+	    echo "Custom HTTP code";
+   }
+	location /status/403 {
+	    echo_status 403;
+	    echo "Custom HTTP code";
+   }
+	location /status/404 {
+	    echo_status 404;
+	    echo "Custom HTTP code";
+   }
+	location /status/405 {
+	    echo_status 405;
+	    echo "Custom HTTP code";
+   }
+	location /status/500 {
+	    echo_status 500;
+	    echo "Custom HTTP code";
+   }
+	location /status/503 {
+	    echo_status 503;
+	    echo "Custom HTTP code";
+   }
+
 }
