--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -8,6 +8,7 @@ DEBUG=0
 COLOR_NON="\033[0m"
 COLOR_ERR="\033[0;31m"
 COLOR_SUC="\033[0;32m"
+DIFF_OPT="-u"
 
 # Path of binaries and where deploy tmp files
 PROXY_CFG_F="/tmp/zproxy.cfg"
@@ -21,6 +22,10 @@ CURL_BIN="/usr/bin/curl"
 HTTPD_BIN="/usr/sbin/nginx"
 ZPROXY_TPL="tpl/init_zproxy.cfg"
 HTTP_TPL="tpl/nginx.conf"
+NGINX_MODULE_ECHO="/usr/lib/nginx/modules/ngx_http_echo_module.so"
+NGINX_MODULE_HEADER="/usr/lib/nginx/modules/ngx_http_headers_more_filter_module.so"
+NGINX_MODULE_ECHO_CONF="/etc/nginx/modules-enabled/50-mod-http-echo.conf"
+NGINX_MODULE_HEADER_CONF="/etc/nginx/modules-enabled/50-mod-http-headers-more-filter.conf"
 
 # Define the test network
 CL_SUBNET="10.1.1"
@@ -34,6 +39,15 @@ PROXY_VPORT="80"
 PROXY_IF="VIP"
 PROXY_GRACETIME=1
 PROXY_NS="proxy-ns"
+PROXY_CTL_DUMP_METHOD="GET"
+PROXY_CTL_DUMP_URL="/listener/0/services"
+# flag to know if zproxy is running before ending the tests
+ZPROXY_KEEP_RUNNING=0
+PROXY_CTL_RELOAD_URL="/config"
+PROXY_CTL_RELOAD_METHOD="PATCH"
+
+# Client cfg
+CLIENT_CONN_TIMEOUT=2
 
 # This variables defines the lab nodes size
 TESTS_NUM_CL=2
