--- a/tests/functional/tpl/nginx.conf
+++ b/tests/functional/tpl/nginx.conf
@@ -1,7 +1,8 @@
 user www-data;
 worker_processes auto;
 pid #{HTTP_PID};
-include /etc/nginx/modules-enabled/*.conf;
+include #{NGINX_MODULE_ECHO_CONF};
+include #{NGINX_MODULE_HEADER_CONF};
 
 events {
 	worker_connections 768;
@@ -19,7 +20,7 @@ http {
 	tcp_nodelay on;
 	keepalive_timeout 65;
 	types_hash_max_size 2048;
-	# server_tokens off;
+	server_tokens off;
 
 	# server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
@@ -59,9 +60,6 @@ http {
 	##
 
 	include #{HTTP_SITE};
-
-#	include /etc/nginx/conf.d/*.conf;
-#	include /etc/nginx/sites-enabled/*;
 }
 
 
