tests: Add some code improvements
* Add a new argument "diff" to list the different outputs of the last test execution
* Renamed the argument "save_out" to "save"
* All tmp files are created in a directory that is removed when the argument "stop" is executed
* Fixed the tests didn't return error when it failed reloading the zproxy configuration file

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -1,5 +1,9 @@
 #!/bin/bash
 
+TMP_DIR="/tmp/functional-tests"
+mkdir -p $TMP_DIR 2>/dev/null
+
+
 # Value 1: it shows the executed system commands
 # Value 2: it shows the output of the system commands
 DEBUG=0
@@ -11,10 +15,10 @@ COLOR_SUC="\033[0;32m"
 DIFF_OPT="-u"
 
 # Path of binaries and where deploy tmp files
-PROXY_CFG_F="/tmp/zproxy.cfg"
-PROXY_PID_F="/var/run/env_proxy.pid"
+PROXY_CFG_F="$TMP_DIR/zproxy.cfg"
+PROXY_PID_F="$TMP_DIR/env_proxy.pid"
 PROXY_BIN="/usr/local/zevenet/app/zproxy/bin/zproxy"
-PROXY_CTL_SOCKET="/tmp/env_proxy.socket"
+PROXY_CTL_SOCKET="$TMP_DIR/env_proxy.socket"
 PROXY_SOCKET_IP="localhost"
 PROXYCTL_BIN="/usr/local/zevenet/app/zproxy/bin/zproxyctl"
 WRK_BIN="/usr/bin/wrk"
@@ -111,7 +115,7 @@ MAX_NODES=2
 # They are required for tpl files
 create_vars () {
 
-	TMP="/tmp/envdyn"
+	TMP="$TMP_DIR/envdyn"
 	rm $TMP 2>/dev/null
 
 	touch $TMP
