--- a/tests/functional/tests/004_reload_cfg_file/zproxy.cfg
+++ b/tests/functional/tests/004_reload_cfg_file/zproxy.cfg
@@ -9,7 +9,7 @@ ConnTO		20
 Alive		10
 Client		30
 ThreadModel	dynamic
-Control		"/tmp/env_proxy.socket"
+Control		"#{PROXY_CTL_SOCKET}"
 
 ListenHTTP
 	Address 0.0.0.0
