tests: add command line options to control if executing benchmark or functional tests
* The option "-f" will only execute the functional test
* The option "-b" will only execute the benchmark test

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -3,10 +3,15 @@
 TMP_DIR="/tmp/functional-tests"
 mkdir -p $TMP_DIR 2>/dev/null
 
-
 # Value 1: it shows the executed system commands
 # Value 2: it shows the output of the system commands
 DEBUG=0
+
+# flags
+# flag to know if zproxy is running before ending the tests
+ZPROXY_KEEP_RUNNING=0
+FUNCTIONAL_FLAG=1
+BENCHMARK_FLAG=1
 
 # Colors for test output
 COLOR_NON="\033[0m"
@@ -45,8 +50,6 @@ PROXY_GRACETIME=1
 PROXY_NS="proxy-ns"
 PROXY_CTL_DUMP_METHOD="GET"
 PROXY_CTL_DUMP_URL="/listener/0/services"
-# flag to know if zproxy is running before ending the tests
-ZPROXY_KEEP_RUNNING=0
 PROXY_CTL_RELOAD_URL="/config"
 PROXY_CTL_RELOAD_METHOD="PATCH"
 
@@ -66,9 +69,8 @@ BENCH_CONNS=50
 BENCH_DELAY=30
 BENCH_CL_THREADS=2
 
-# expand svc: svc1.proxy.test, sv2.proxy.test...
-HOSTNAMES="proxy.test"
 
+###
 
 # Some functions to create dynamic variables. They depend on the number of clients and bcks nodes
 get_cl_ns () {
