tests: Divide the test output in several files
* The command and output generated by a test are divided in several files: cmd.out, response_headers.out, body.out and benchmark.out
* Fix an error parsing the command line options
* Add parameters to modify the request body and headers

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tests/002_https_farm/test.in
+++ b/tests/functional/tests/002_https_farm/test.in
@@ -2,13 +2,11 @@ CMD=curl
 CL=1
 METHOD="GET"
 URL="/"
-VHOST=
 #########################
 CMD=curl
 CL=1
 METHOD="GET"
 URL="/"
-VHOST=
 SSL=1
 #########################
 CMD=average
@@ -18,9 +16,16 @@ METHOD="GET"
 URL="/"
 SSL=1
 #########################
+CMD=curl
+CL=1
+METHOD=POST
+URL=/echo
+BODY=file_short.txt
+HEADERS="Content-Type: text/plain"
+SSL=1
+#########################
 CMD=benchmark
 CL=1
 METHOD="GET"
 URL="/"
 SSL=1
-
