tests: add information about the http protocol version
* Add error output in a different file
* Add an extended file with extra data

Signed-off-by: Alvaro Cano <alvaro.cano@zevenet.com>

--- a/tests/functional/tpl/variables.ini
+++ b/tests/functional/tpl/variables.ini
@@ -36,6 +36,9 @@ NGINX_MODULE_HEADER="/usr/lib/nginx/modules/ngx_http_headers_more_filter_module.
 NGINX_MODULE_ECHO_CONF="/etc/nginx/modules-enabled/50-mod-http-echo.conf"
 NGINX_MODULE_HEADER_CONF="/etc/nginx/modules-enabled/50-mod-http-headers-more-filter.conf"
 
+OUTPUT_FILES="cmd.out response_headers.out body.out error.out extended.out benchmark.out"
+AVERAGE_FILES_TMP="cmd.out.tmp response_headers.out.tmp body.out.tmp error.out.tmp extended.out.tmp"
+
 # Define the test network
 CL_SUBNET="10.1.1"
 CL_VIA_SUBNET="10.1.0"
